// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileRenderer Component render default 1`] = `
<FileCard
  defaultOpen={true}
  file={
    Object {
      "fileName": "some_file",
      "fileUrl": "some_url",
    }
  }
>
  <Renderer
    abc={123}
  />
</FileCard>
`;

exports[`FileRenderer Component render error banner 1`] = `
<FileCard
  defaultOpen={true}
  file={
    Object {
      "fileName": "some_file",
      "fileUrl": "some_url",
    }
  }
>
  <ErrorBanner
    message="some_error"
  />
</FileCard>
`;

exports[`FileRenderer Component render loading banner 1`] = `
<FileCard
  defaultOpen={true}
  file={
    Object {
      "fileName": "some_file",
      "fileUrl": "some_url",
    }
  }
>
  <LoadingBanner />
</FileCard>
`;
